# bd_realization

./: .gitignore  pyproject.toml
bd_realization/: __main__.py  database.py  gui.py  logic.py  models.py
bd_realization/constant_tables/: table3_5.py  table3_6.py
