[tool.poetry]
name = "bd-realization"
version = "0.1.0"
description = ""
authors = ["Dmitriy <dm.elackov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
sqlalchemy = "^2.0.36"
pyside6 = "^6.8.1"
aiosqlite = "^0.20.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
